--- a/app/src/main/res/xml/random_numbers_widget_info.xml
+++ b/app/src/main/res/xml/random_numbers_widget_info.xml
@@ -4,7 +4,7 @@
     android:initialLayout="@layout/random_numbers_widget"
     android:minWidth="220dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/dicoding"
+    android:previewImage="@drawable/dicoding_logo_full"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen"/>
